--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.3", //delete this line later/// npm i --save react-script//
     "web-vitals": "^2.1.4"
   },
   "scripts": {
